--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:JSmerec98/spring-pet-clinic.git</developerConnection>
-        <tag>spring-pet-clinic-0.0.1</tag>
+        <developerConnection>scm:git:https://github.com/JSmerec98/spring-pet-clinic.git</developerConnection>
+        <tag>HEAD</tag>
   </scm>
 
 </project>
